[package]
name = "tuneutils"
version = "0.1.2"
authors = ["Altenius <jacobjm18@gmail.com>"]
description = "Utilities for interfacing with, diagnosing, and tuning cars"
respository = "https://github.com/LibreTuner/tuneutils"
keywords = ["tuning", "cars", "ecu", "automotive", "obd"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"

[features]
socketcan = []
windows = ["j2534"]

[dependencies]
libc = "0.2"
byteorder = "1.2"
itertools = "0.7"
serde = "1.0"
serde_derive = "1.0"
eval = "^0.4"
serde_yaml = "0.8"
bv = "0.10.0"

[target.'cfg(windows)'.dependencies]
j2534 = { version = "0.1.2", optional = true }