[package]
name = "tuneutils"
version = "0.1.0"
authors = ["Altenius <jacobjm18@gmail.com>"]
description = "Utilities for tuning vehicles"
respository = "https://github.com/LibreTuner/tuneutils"

[features]
socketcan = []
windows = ["j2534"]

[dependencies]
libc = "0.2"
byteorder = "1.2"
itertools = "0.7"
serde = "1.0"
serde_derive = "1.0"
eval = "^0.4"
serde_yaml = "0.8"
bv = "0.10.0"
num-traits = "0.2"
rustyline = "2.1.0"

[target.'cfg(windows)'.dependencies]
j2534 = { path = "j2534", optional = true }

[workspace]
members = [
    "j2534",
]